Bug fix: User ID Issue

--- a/lib/appConfig.json
+++ b/lib/appConfig.json
@@ -14,7 +14,7 @@
         "serverCertOrg" : "AWS",
         "serverCertLocation" : "Philadelphia",
         "serverCertCountry" : "US",
-        "userCertSampleUser" : "DEVELOPER"
+        "userCertSampleUser" : "awsonsapapi@example.com"
     },
 
     "cfexports":{
