--- a/lib/appConfig.json
+++ b/lib/appConfig.json
@@ -1,7 +1,7 @@
 {
     "env" : {
         "account" : "<YOUR AWS ACCOUNT NO.>",
-        "region" : "YOUR AWS ACCOUNT REGION>"
+        "region" : "<YOUR AWS ACCOUNT REGION>"
     },
     "stackName" : "SAPCertAuth",
     "sap" : {
